# pi-conf

./: .gitignore  Makefile  README.md  pyproject.toml
p_conf/: __init__.py  config.py
pi_conf/: attr_dict.py  config.py  config_settings.py  module_check.py  provenance.py
tests/: test_config.py  test_config_settings.py  test_config_settings_mongo.py  test_config_subclass.py  test_from_str_and_load_keywords.py  test_loading.py  test_nested_get.py  test_provenance.py
