[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "mongomock>=4.1.2",
  "pydantic-settings>=2.3.4",
  "pymongo>=4.8.0",
  "pytest>=8.2.2",
  "pyyaml>=6.0.1",
  "toml-sort>=0.23.1",
  "toml>=0.10.2",
  "types-pyyaml>=6.0.12.20240311",
  "types-toml>=0.10.8.20240310"
]

[project]
authors = [{email = "3028114+parnell@users.noreply.github.com", name = "parnell"}]
dependencies = [
  "platformdirs>=3.0.0",
  'toml>=0.10.2; python_version < "3.11"'
]
description = "Easy configs for python projects"
license = {text = "MIT"}
name = "pi-conf"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0.0"

[project.optional-dependencies]
mongo = ["pymongo>=4.8.0"]
pydantic = ["pydantic-settings>=2.3.4", "toml>=0.10.2"]
yaml = ["pyyaml>=6.0.1"]

[tool.hatch.build.targets.wheel]
packages = ["pi_conf"]

[tool.tomlsort]
all = true
in_place = true

[tool.uv]
default-groups = ["dev"]
